2007-04-10  Vincent Untz  <vuntz@gnome.org>

	* panel-util.c: (panel_error_dialog): don't use the error message as a
	format string.
	Fix bug #418186. Patch by Chris Wilson <chris@chris-wilson.co.uk>

2007-03-15  Vincent Untz  <vuntz@gnome.org>

	* gnome-panel.desktop.in: fix NoDisplay value to be valid

==================== 2.18.0 ====================

2007-03-06  Vincent Untz  <vuntz@gnome.org>

	* Makefile.am: install gnome-panel.desktop for bug-buddy
	* gnome-panel/gnome-panel.desktop.in: new
	Fix bug #382584

2007-03-05  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.glade: fix alignment of a button. This is not a UI
	freeze break since this was wrongly introduced by glade with the
	commit on 2007-02-18.
	Fix bug #414198

2007-02-27  Vincent Untz  <vuntz@gnome.org>

	* menu.c: (setup_menuitem): don't connect to the size request signal
	if the icon size is invalid
	* panel-menu-items.c: (panel_place_menu_item_new),
	(panel_desktop_menu_item_new): use an invalid icon size for
	setup_menuitem() if we don't use icon
	Fix large height of the menubar, which forced the panel size to be at
	least 28.

==================== 2.17.92 ====================

2007-02-19  Vincent Untz  <vuntz@gnome.org>

	* panel-run-dialog.c: add missing include
	* panel-menu-button.c: ditto
	* launcher.c: remove useless include
	* panel-action-button.c: ditto
	* panel-addto.c: ditto
	* panel-applet-frame.c: (panel_applet_frame_load_from_gconf): check
	that the iid is not an emptry string too
	* applet.c: (setup_an_item): get rid of setup_menuitem() and
	panel_create_menu() usage
	(panel_applet_create_menu): ditto
	* panel-context-menu.c: (panel_context_menu_build_edition): ditto
	(panel_context_menu_create): ditto

2007-02-18  Vincent Untz  <vuntz@gnome.org>

	* panel-menu-bar.c: (panel_menu_bar_enter_applications): call
	panel_menu_bar_update_text_gravity() and connect to the screen-changed
	signal because we need to set the gravity again